--- a/package.json
+++ b/package.json
@@ -9,10 +9,16 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^1.9.2",
+    "axios": "^1.3.2",
+    "dotenv": "^16.0.3",
     "flowbite": "^1.6.3",
     "flowbite-react": "^0.3.8",
+    "joi": "^17.7.0",
+    "jwt-decode": "^3.1.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-redux": "^8.0.5",
     "react-router-dom": "^6.8.0"
   },
   "devDependencies": {
