--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "flowbite-react": "^0.3.8",
     "joi": "^17.7.0",
     "jwt-decode": "^3.1.2",
+    "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.5",
