--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-load-script": "^0.0.6",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.8.0",
     "react-toastify": "^9.1.1"
