--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.2",
     "axios": "^1.3.2",
+    "daisyui": "^2.51.5",
     "flowbite": "^1.6.3",
     "flowbite-react": "^0.3.8",
     "joi": "^17.7.0",
